--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>To Do List</title>
-  <link rel="stylesheet" href="style.css">
+  <title>To Do List with CDN</title>
+  <link
+  rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+/>
 </head>
-<body>
+<body class="animate__animated animate__zoomIn animate__repeat-3">
 
   <div>
     <input type="text" id="todoInput">
